- 3062122 Bad merge reverted some data types
- 3086146 use SFCB_ElementConformsToProfile instead of CIM_ElementConf
- 3095225 Implement Simple REST Requests
- 3104761 cimRsRequest.h missing from make-dist tarball
- 3107553 Remove Large Volume Support

Changes in 1.3.16
=================

New Features: 
- 3538858 custom routine to log indInst objinfo
- 3555395 Additional auth lib return codes

Bugs fixed:

- 3539006 Possible indication deadlock
- 1901737 Memory leak in internalProvider.c
- 3539555 Memory leak in TestInstanceProvider
- 3539557 Memory leak in providerDrv with property list
- 3539563 Memory leak in indCIMXMLHandler when Reliable Inds Enabled
- 3539569 Leaks in interopProvider

New Features: 
- 3501314 Add dynamic logging and syslog output to sfcb trace

Changes in 1.3.15
=================

New Features: 
- 3501314 Add dynamic logging and syslog output to sfcb trace
- 3517530 Implement mark, release routines in CMPIBrokerMemFT
- 3513390 Enforce LD and subscription limits
- 3527920 RI and http responsecodes
- 3534659 Match SfcbLocal to sfcc update
- 3534977 sfcb custom library and hostname
- 3532494 interopProvider not honoring SourceNamespaces[] correctly

Bugs Fixed:
- 3514627 unsupported sfcb.cfg param - use exit call
- 3516184 commClose close socket when file hndl is null
- 3517573 Problem with SequenceContext migration
- 3525651 CMSetPropertyFilter not CMPI 2.0 compliant
- 3527693 Property filters don't work for enum upcalls
- 3524819 sfcb may hang on ac call to indication subscription
- 3528074 Improve CMPIInstance Error Codes
- 3528096 Error status codes sometimes not propigated for instances
- 3529856 httpProcs limit can be broken
- 3527620 EnumerateClasses does not include qualifiers by default
- 3532951 Filter creation fails with disable default properties
- 3533179 Double definition for union semun  in FreeBSD
- 3535313 xmlUnescape may access memory beyond its buffer
- 3538848 compile error in cimslpCMPI.c:291

Changes in 1.3.14